--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="msapplication-TileColor" content="#3f51b5">
     <meta name="msapplication-tap-highlight" content="no">
 
+    <link rel="import" href="/bower_components/platinum-sw/platinum-sw-elements.html">
     <link rel="import" href="/src/universal-shift-app.html" async>
 
     <style>
@@ -60,6 +61,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
+    <platinum-sw-register
+        auto-register
+        skip-waiting
+        clients-claim
+        reload-on-install
+        href="sw-import.js">
+      <platinum-sw-cache
+          default-cache-strategy="networkFirst">
+      </platinum-sw-cache>
+    </platinum-sw-register>
+
     <universal-shift-app id="app"></universal-shift-app>
     <!-- Built with love using Polymer Starter Kit -->
 
