--- a/public/src/universal-shift-icons.html
+++ b/public/src/universal-shift-icons.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
+<link rel="import" href="../bower_components/iron-icons/device-icons.html">
 <link rel="import" href="../bower_components/iron-iconset-svg/iron-iconset-svg.html">
 
 <iron-iconset-svg name="icons" size="24">
